# vito-robot

./: .gitmodules  README.md
experiment_wp2/calibration/: CMakeLists.txt  package.xml
experiment_wp2/calibration/launch/: hand_calibration.launch  kinect_calibration.launch  object_calibration.launch  tf_camera_world.launch  tf_star_object.launch  tf_wrist_hand.launch
experiment_wp2/calibration/src/: calibration.cpp
experiment_wp2/collect/: CMakeLists.txt  package.xml
experiment_wp2/collect/launch/: collect_launch.launch  experimental_wp2.launch
experiment_wp2/collect/msg/: AllData.msg
experiment_wp2/collect/src/: collectData_node.cpp  collectData_node_nocamera.cpp  collectData_node_oneThimble.cpp
experiment_wp2/display/: CMakeLists.txt  package.xml
experiment_wp2/display/launch/: display_all.launch
experiment_wp2/display/mesh/: conic_with_closed_handle.stl  container.stl  cup.stl  cy_cup.stl  cyl_w_closed_handle.stl  (+16 more)
experiment_wp2/experiment_wp2/: CMakeLists.txt  package.xml
pacman_unipi_pkgs/: CMakeLists.txt  package.xml
vito_controllers/: CMakeLists.txt  package.xml  vito_controllers_plugins.xml
vito_controllers/include/utils/: geometries_utilities.h  kuka_lwr_utilities.h  pf_utilities.h  pseudo_inversion.h  pseudo_inversion_rank_update.h  ros_desperate_housewife_utilities.h  skew_symmetric.h
vito_controllers/include/vito_controllers/: DualArms.h  DualArms_vecchio.h  KinematicChainControllerBase.h  cartesian_impedance_vito_controller.h  teleoperation_controller.h  vito_bridge_controller.h
vito_controllers/msg/: config.msg
vito_controllers/src/: DualArms.cpp  KinematicChainControllerBase.cpp  cartesian_impedance_vito_controller.cpp  dual_arm_manager.cpp  teleoperation_controller.cpp  vito_bridge_controller.cpp
vito_description/: CMakeLists.txt  README.md  package.xml
vito_description/config/: controller.yaml  hardware_interfaces.yaml  left_arm_names.yaml  right_arm_names.yaml  vito.srdf  vito_controllers.yaml  vito_controllers_iliad.yaml  vito_controllers_soma.yaml  vito_simple_controllers.yaml
vito_description/launch/: display.launch  display_all.launch  display_for_calibration.launch  display_for_exploration.launch  display_simple.launch  display_soma.launch  display_with_cube.launch  fake_calibration.launch  grasp_db_generation.launch.xml  rviz_calib_config.rviz  rviz_config.rviz  spawn_object.launch.xml  vito.rviz
vito_description/meshes/: camera_robot_calibrator.stl  gazebo_assieme.stl  gripper.stl  table.stl  torso._oldstl  torso.stl  torso_b.stl
vito_description/model/: calibrator.urdf.xacro  clamp.urdf.xacro  cube.urdf.xacro  cutter.urdf.xacro  cylinder.urdf.xacro  materials.urdf  softhand_base.urdf.xacro  table.urdf.xacro  torso.urdf.xacro  velvet.urdf.xacro
vito_description/robot/: environment.urdf.xacro  head.urdf.xacro  left_arm.urdf.xacro  left_hand.urdf.xacro  right_arm.urdf.xacro  right_hand.urdf.xacro  tableTorso.urdf.xacro  vito.urdf.xacro  vito_calib.urdf.xacro  vito_exploration.urdf.xacro  vito_iliad.urdf.xacro  vito_simple.urdf.xacro  vito_soma.urdf.xacro
vito_description/robots/: vito.urdf.xacro
vito_description/worlds/: simple_environment.world
vito_moveit_configuration/: .setup_assistant  CMakeLists.txt  package.xml
vito_moveit_configuration/config/: controllers.yaml  environment.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  sensors_rgbd.yaml  vito.srdf
vito_moveit_configuration/launch/: default_warehouse_db.launch  demo.launch  demo_dual_manipulation.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group_dual_manipulation.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  pacman_demo.launch  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  vito_moveit_controller_manager.launch.xml  vito_moveit_sensor_manager.launch.xml  warehouse.launch
vito_robot/: CMakeLists.txt  package.xml
(+15 files in other folders)
